Fix Swagger documentation and Render host
